hphp/hack/test/typecheck/coeffects/memoize_policy-sharded.php.exp
File "memoize_policy-sharded.php", line 8, characters 15-15:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "memoize_policy-sharded.php", line 8, characters 21-25:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "memoize_policy-sharded.php", line 4, characters 36-43:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "memoize_policy-sharded.php", line 12, characters 34-34:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "memoize_policy-sharded.php", line 12, characters 40-44:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "memoize_policy-sharded.php", line 4, characters 36-43:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "memoize_policy-sharded.php", line 20, characters 15-15:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "memoize_policy-sharded.php", line 20, characters 21-25:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "memoize_policy-sharded.php", line 16, characters 36-48:
  But the function being called requires the capability set {ImplicitPolicyShallow, ReadGlobals, SystemShallow, WriteProperty}
File "memoize_policy-sharded.php", line 24, characters 34-34:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "memoize_policy-sharded.php", line 24, characters 40-44:
  From this declaration, the context of this function body provides the capability set {ImplicitPolicy, ReadGlobals, System, WriteProperty}
  File "memoize_policy-sharded.php", line 16, characters 36-48:
  But the function being called requires the capability set {ImplicitPolicyShallow, ReadGlobals, SystemShallow, WriteProperty}
